Add - Testcase for DCC parser

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,9 +10,8 @@
 
 [platformio]
 default_envs = 
-	xiao_rp2040
-src_dir  = 
-   .
+	native
+src_dir  = .
 
 [env]
 build_flags = -Wall -Wextra
@@ -22,27 +21,11 @@ build_src_filter =
   -<.git/>
   -<.svn/>
   -<test/**>
-;  -<examples/**>
-
-[env:xiao_rp2040]
-platform = https://github.com/maxgerhardt/platform-raspberrypi.git
-framework = arduino
-board_build.core = earlephilhower
-board = seeed_xiao_rp2040
-lib_deps =
-;   NmraDcc
-   EEPROM
-   adafruit/Adafruit TinyUSB Library
-build_flags = 
-   -std=gnu++11
-   -DUSE_TINYUSB
-   -I"${PROJECT_CORE_DIR}\packages\framework-arduino-samd-seeed\libraries\Adafruit_TinyUSB_Arduino\src\arduino"
 
 [env:native]
 platform = native
+debug_test = *
 lib_compat_mode = off
 lib_deps =
       ArduinoFake
-;      NmraDcc
-;      EEPROM
-; build_flags = -std=gnu++11
+
